# DHCP_Server

./: .dockerignore  .env.example  .gitignore  CMakeLists.txt  Dockerfile  README.md  client.sh  relay.sh  server.sh
src/: client.c  client.h  main.c  main.h  relay.c  relay.h  server.c  server.h
src/config/: db.c  db.h  env.c  env.h
src/data/: base_datos.db  ip_pool.c  ip_pool.h  message.c  message.h
src/utils/: utils.c  utils.h
